Fixin docker compose file and updating docker image versions

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,17 +1,17 @@
 version: "3"
 services:
   hub:
-    image: selenium/hub:3.14
+    image: selenium/hub:latest
     ports:
       - "4444:4444"
   chrome:
-    image: selenium/node-chrome
+    image: selenium/node-chrome:latest
     depends_on:
       - hub
     environment:
       - HUB_HOST=hub
   firefox:
-    image: selenium/node-firefox
+    image: selenium/node-firefox:latest
     shm_size: '1gb'
     depends_on:
       - hub
